--- a/style.css
+++ b/style.css
@@ -1,37 +1,71 @@
 body {
-    font-family: 'lato', sans-serif;
-    margin: 0% 0% 0% 0%;
-  }
-  
+  font-family: 'lato', sans-serif;
+  margin: 0% 0% 0% 0%;
+}
+
+.hamburger {
+  align-self: flex-start;
+  margin: 5% 0% -3% 5%;
+}
+
+/* .class-hide {
+  display: none;
+} */
+
+.menu-bg {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.close {
+  position: relative;
+  left: 2%;
+  top: 2%;
+  width: 10%;
+}
+
+.nav-wrapper {
+  margin-bottom: 59%;
+}
+
+.nav-wrapper li {
+  list-style: none;
+  padding: 0% 9%;
+  margin-bottom: 2%;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+}
+
+.head-nav {
+  position: absolute;
+  border: #ec5242 solid 2px;
+  color: #d3d3d3;
+  width: 61vw;
+  height: 60vh;
+  background-color: #272a31;
+  top: 6%;
+  left: 14%;
+}
+
+.hamburger img {
+  width: 31px;
+  text-decoration: none;
+  color: beige;
+}
+
+.nav-link img {
+  width: 48%;
+  margin: 11% 24% 0% 25%;
+}
+
+@media screen and (min-width) {
   .hamburger {
-    align-self: flex-start;
-    margin: 5% 0% -3% 5%;
-  }
-  
-  .class-hide {
     display: none;
   }
-  
-  .menu-bg {
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  
-  .hamburger img {
-    width: 31px;
-    text-decoration: none;
-    color: beige;
-  }
-  
-  .nav-link img {
-    width: 48%;
-    margin: 11% 24% 0% 25%;
-  }
-  
-  @media screen and (min-width) {
-    .hamburger {
-      display: none;
-    }
-  }
+}
