--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ footer {
   padding: 1% 5% 15% 5%;
 }
 
+.title-red {
+  color: #ec5242;
+  font-weight: 500;
+  font-size: 1.2rem;
+  margin: 12% 0% 0% 0%;
+}
+
 .nav-link img {
   width: 48%;
   margin: 11% 24% 0% 25%;
