--- a/style.css
+++ b/style.css
@@ -110,6 +110,30 @@ h1 {
   padding: 5%;
 }
 
+.tech-explain p {
+  color: #272a31;
+  margin: 0% 0% 0% 0.9%;
+  font-size: 0.9rem;
+  line-height: 21px;
+  text-align: center;
+}
+
+.address-place {
+  padding: 0;
+  margin: 0;
+}
+
+.place {
+  font-weight: 500;
+  margin: 0% 0%;
+}
+
+.address {
+  font-weight: 899;
+  font-size: 1.6rem;
+  margin-bottom: 2.5%;
+}
+
 .nav-link img {
   width: 48%;
   margin: 11% 24% 0% 25%;
