--- a/style.css
+++ b/style.css
@@ -301,4 +301,24 @@ h1 {
   .hamburger {
     display: none;
   }
+
+  .menu-bg {
+    position: static;
+    position: unset;
+    width: 100%;
+    height: 9%;
+    display: block;
+  }
+
+  .head-nav {
+    height: 100%;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    display: block;
+    border: none;
+    position: static;
+    position: unset;
+    
+  }
 }
