--- a/style.css
+++ b/style.css
@@ -310,6 +310,25 @@ h1 {
     display: block;
   }
 
+  .nav-link img {
+    width: 123%;
+    padding: 0% 0% 0% 0%;
+    margin: 0% 0% 0% 0%;
+  }
+
+  .logo {
+    width: 11%;
+  }
+
+  .nav-link {
+    padding: 1% 10% 0% 10%;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    position: static;
+    position: unset;
+  }
+
   .head-nav {
     height: 100%;
     width: 100%;
@@ -319,6 +338,20 @@ h1 {
     border: none;
     position: static;
     position: unset;
-    
+    background-color: white;
+  }
+
+  .nav-wrapper {
+    margin: 0;
+    display: flex;
+  }
+
+  .nav-wrapper li a {
+    color: black;
+  }
+
+  .nav-wrapper li {
+    margin: 0;
+    padding: 0% 8%;
   }
 }
