--- a/about.css
+++ b/about.css
@@ -3,6 +3,22 @@ body {
   margin: 0% 0% 0% 0%;
 }
 
+.info-conf {
+  color: #272a31;
+  font-size: 0.8rem;
+  width: 60%;
+  text-align: center;
+  line-height: 18px;
+}
+
+#info {
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  font-weight: 700;
+  /* margin-top: 0.5%; */
+}
+
 .hamburger {
   align-self: flex-start;
   margin: 5% 0% -3% 5%;
@@ -104,14 +120,14 @@ h1 {
 .tech-explain {
   border: white 2px solid;
   color: #272a31;
-  background-color: rgb(242, 242, 242);
+  background-color: white;
   max-width: 90%;
   margin: 3% 0% 0% 0%;
   padding: 5%;
 }
 
 .tech-explain p {
-  color: #272a31;
+  color: black;
   margin: 0% 0% 0% 0.9%;
   font-size: 0.9rem;
   line-height: 21px;
@@ -391,8 +407,7 @@ h1 {
   }
 
   .tech-explain {
-    width: 52%;
-    padding: 3.2%;
+    width: 100%;
   }
 
   .underline {
