--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'lato', sans-serif;
   margin: 0% 0% 0% 0%;
@@ -8,9 +21,46 @@ body {
   margin: 5% 0% -3% 5%;
 }
 
-/* .header-menu {
+.nav-mobile {
   display: none;
-} */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #272a31;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+  background: rgba(186, 47, 47, 0.778);
+  backdrop-filter: blur(5px);
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+  list-style: none;
+}
+
+.wrapper ul li {
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+
+.wrapper ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.wrapper ul li a:hover {
+  color: #000;
+}
 
 .class-hide {
   display: none;
@@ -18,18 +68,24 @@ body {
 
 .menu-bg {
   height: 100vh;
-  width: 100vw;
-  position: fixed;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.close {
-  position: relative;
-  left: 2%;
-  top: 2%;
-  width: 10%;
+.closebtn {
   display: none;
+  z-index: 2;
+  float: right;
+  margin: 20px;
+  background-color: transparent;
+  border: none;
+  color:#fff;
+  font-size: 1.5rem;
+  background-color: black;
+  padding: 5px 8px;
+  border-radius: 50%;
 }
+
 
 .nav-wrapper {
   margin-bottom: 59%;
@@ -48,12 +104,6 @@ body {
 }
 
 .register {
-  color: #ec5242;
-  margin: 15% 0% 5% 25%;
-  text-decoration: none;
-  background-color: white;
-  padding: 5% 8%;
-  border: #ec5242 2px solid;
   display: none;
 }
 
@@ -64,15 +114,12 @@ footer {
 }
 
 .head-nav {
-  position: absolute;
   border: #ec5242 solid 2px;
   color: #d3d3d3;
-  width: 61vw;
-  height: 60vh;
+  width: 100%;
   background-color: #272a31;
-  top: 6%;
-  left: 14%;
-  /* display: none; */
+  display: none;
+  overflow: hidden;
 }
 
 .hamburger img {
@@ -89,7 +136,6 @@ footer {
   background-image: url(img/bg.jpg);
   background-position: 93% 6%;
   background-repeat: no-repeat;
-  background-size: 106%;
   padding: 1% 5% 15% 5%;
 }
 
@@ -194,14 +240,13 @@ h1 {
 .underline {
   border-bottom: #ec5242 solid 1px;
   height: 1.5px;
-  width: 12%;
+  width: 30%;
   margin: 0%;
 }
 
 .lecture-list {
   display: flex;
   flex-direction: column;
-  padding: 6%;
   align-items: center;
 }
 
@@ -212,13 +257,36 @@ h1 {
   display: flex;
 }
 
-.lecture-display {
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-  display: grid;
+.lecture-all {
+  display: flex;
+  gap: 30px;
+  margin: 50px 90px;
+}
+
+.image-lecture {
+  width: 200px;
+  height: 100px;
+}
+
+.lecture-nom {
+  font-size: 1.2rem;
+}
+
+.lecture-titre {
+  color: #ec5242;
+  font-style: italic;
+  font-size: 0.67rem;
+}
+
+.lecture-resu {
+  font-weight: 400;
+  color: rgb(94, 86, 86);
+  font-size: 0.825rem;
 }
 
 .lecture-text {
-  margin-bottom: 4%;
+  margin-top: 50px;
+  margin-bottom: 8px;
   font-size: 1.5rem;
 }
 
@@ -273,6 +341,11 @@ h1 {
 }
 
 @media screen and (min-width: 769px) {
+
+  * {
+    overflow-x: visible;
+  }
+
   .header-menu {
     display: block;
     background-color: #272a31;
@@ -306,62 +379,76 @@ h1 {
     list-style: none;
   }
 
-  .close {
-    display: none;
-  }
-
   .hamburger {
     display: none;
   }
 
   .menu-bg {
-    position: static;
-    position: unset;
+    /* position: static;
+    position: unset; */
     width: 100%;
     height: 9%;
     display: block;
+    /* background-color: #272a31; */
+    overflow: hidden;
   }
 
-  .nav-link img {
-    width: 123%;
-    padding: 0% 0% 0% 0%;
-    margin: 0% 0% 0% 0%;
+  .logo img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
   }
 
   .logo {
+    margin: 8px 10px;
     width: 11%;
   }
 
   .nav-link {
-    padding: 1% 10% 0% 10%;
-    align-items: center;
+    display: flex;
+    /* padding: 1% 10% 0% 10%; */
+    /* align-items: center; */
     justify-content: space-between;
     display: flex;
-    position: static;
-    position: unset;
+    /* position: static; */
+    /* position: unset; */
   }
 
   .head-nav {
-    height: 100%;
-    width: 100%;
-    top: 0%;
-    left: 0%;
-    display: block;
+    /* height: 100%; */
+    width: 100%; 
+    /* top: 0%; */
+    /* left: 0%; */
+    display: flex;
     border: none;
-    position: static;
-    position: unset;
-    background-color: white;
+    /* position: static; */
+    /* position: unset; */
+    background-color: transparent;
+    overflow: hidden;
+    justify-content: space-around;
   }
 
   .nav-wrapper {
+    overflow-x: inherit;
     margin: 0;
     display: flex;
+    justify-content: space-between;
+    align-items: center; 
+  }
+
+  .closebtn {
+    display: none;
   }
 
   .register {
-    padding: 1% 1%;
-    margin: 0% 0% 0% 0%;
-    position: relative;
+    display: flex;
+    color: #ec5242;
+    margin: 8px 10px;
+    text-decoration: none;
+    background-color: white;
+    padding: 0 30px;
+    border: #ec5242 2px solid;
+    align-items: center;
   }
 
   #about {
@@ -407,7 +494,7 @@ h1 {
   }
 
   .underline {
-    width: 8%;
+    width: 3%;
   }
 
   .title-red {
@@ -468,7 +555,7 @@ h1 {
 
   /* class dynamic */
   .lecture-display {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2, 1fr);
     display: grid;
   }
 
@@ -480,17 +567,7 @@ h1 {
   .lecture-all img {
     width: 150px;
     height: 150px;
-    /* margin-right: 2%; */
   }
-
-  /* .lecture-desc {
-    display: grid;
-  } */
-  /* .lecture-desc > * {
-    padding: 0% 0% 0% 5%;
-    margin: 2.5% 0%;
-  } */
-
 
   .lecture-nom {
     font-size: 1.2rem;
@@ -510,11 +587,6 @@ h1 {
 
   .display-boutton {
     display: none;
-  }
-
-  .hide-lecture {
-    display: grid;
-    display: unset;
   }
 
   .program-resume {
@@ -540,12 +612,9 @@ h1 {
     width: 20%;
   }
 
-  /* .lecture-all {
-    margin: 0% 1% 5% 0%;
-  } */
   .parteners-main {
-    height: 46vh;
     padding: 6%;
     display: block;
   }
+
 }
