--- a/about.css
+++ b/about.css
@@ -21,12 +21,35 @@ body {
   margin: 5% 0% -3% 5%;
 }
 
+.trainingimg {
+  margin: 9% 9%;
+  max-width: 100%;
+}
+
+.image img {
+  max-width: 100%;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  vertical-align: middle;
+  position: relative;
+}
+
+.old-training {
+  padding: 6%;
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  border-top: #dbdbdb solid 1px;
+  border-bottom: #dbdbdb solid 1px;
+}
+
 .nav-mobile {
   display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #272a31;
+
+  /* background-color: #272a31; */
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -46,6 +69,18 @@ body {
   justify-content: center;
   margin-top: 100px;
   list-style: none;
+}
+
+.nav-wrapper li {
+  list-style: none;
+  padding: 0% 9%;
+  margin-bottom: 2%;
+}
+
+.nav-wrapper li a {
+  text-decoration: none;
+  color: white;
+  font-size: 1.1rem;
 }
 
 .wrapper ul li {
@@ -77,30 +112,15 @@ body {
   z-index: 2;
   float: right;
   margin: 20px;
-  background-color: transparent;
-  border: none;
-  color:#fff;
+  color: #fff;
   font-size: 1.5rem;
   background-color: black;
   padding: 5px 8px;
   border-radius: 50%;
 }
 
-
 .nav-wrapper {
   margin-bottom: 59%;
-}
-
-.nav-wrapper li {
-  list-style: none;
-  padding: 0% 9%;
-  margin-bottom: 2%;
-}
-
-.nav-wrapper li a {
-  text-decoration: none;
-  color: white;
-  font-size: 1.1rem;
 }
 
 .register {
@@ -247,6 +267,7 @@ h1 {
 .lecture-list {
   display: flex;
   flex-direction: column;
+
   /* padding: 6%; */
   align-items: center;
 }
@@ -342,7 +363,6 @@ h1 {
 }
 
 @media screen and (min-width: 769px) {
-
   * {
     overflow-x: visible;
   }
@@ -385,12 +405,9 @@ h1 {
   }
 
   .menu-bg {
-    /* position: static;
-    position: unset; */
     width: 100%;
     height: 9%;
     display: block;
-    /* background-color: #272a31; */
     overflow: hidden;
   }
 
@@ -407,23 +424,13 @@ h1 {
 
   .nav-link {
     display: flex;
-    /* padding: 1% 10% 0% 10%; */
-    /* align-items: center; */
     justify-content: space-between;
-    display: flex;
-    /* position: static; */
-    /* position: unset; */
   }
 
   .head-nav {
-    /* height: 100%; */
-    width: 100%; 
-    /* top: 0%; */
-    /* left: 0%; */
+    width: 100%;
     display: flex;
     border: none;
-    /* position: static; */
-    /* position: unset; */
     background-color: transparent;
     overflow: hidden;
     justify-content: space-around;
@@ -434,7 +441,7 @@ h1 {
     margin: 0;
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
   }
 
   .closebtn {
@@ -450,6 +457,13 @@ h1 {
     padding: 0 30px;
     border: #ec5242 2px solid;
     align-items: center;
+  }
+
+  .about-logo {
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    padding: 2% 8%;
   }
 
   #about {
@@ -561,7 +575,6 @@ h1 {
 
   .lecture-all {
     display: flex;
-   
   }
 
   .lecture-all img {
@@ -617,5 +630,4 @@ h1 {
     padding: 6%;
     display: block;
   }
-
 }
